# log4cplus2rust

./: .clang-format  .gitignore  Cargo.toml  README.md  build.rs
log4cplus2rust/: Cargo.toml  build.rs
log4cplus2rust/src/: lib.rs  log4cplus2c.cpp  log4cplus2c.h
log4cplus2rust/src/handler/: bindings.rs  log4cplus2c.cpp  log4cplus2c.h  mod.rs
log4cplus2rust_it/: Cargo.toml  build.rs
log4cplus2rust_it/src/: example.cpp  example.h  lib.rs
src/: log4cplus2c.cpp  log4cplus2c.h
src/handler/: mod.rs
tests/: integration_tests.rs
