[package]
name = "log4cplus2rust_it"
version = "0.1.0"
authors = ["Piotr Zaczkowski <pzaczkowski@protonmail.com"]
edition = "2018"
license = "Apache Licence 2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log4cplus2rust = { path = "../log4cplus2rust" }
env_logger = "0.7"

[build-dependencies]
cc = "1.0"
bindgen = "0.51"
pkg-config = "0.3"
